# libcmscodec

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  compile-asn1.sh  configure.ac  deconf.sh
asn1/: rfc5280-a.1.asn1  rfc5280-a.2.asn1  rfc5652-12.1.asn1  rfc6486-a.asn1  rsync.asn1
src/: Makefile.am  compile-asn1.sh  draft-ietf-sidrops-rpki-rsc.asn1  rfc3281-b.asn1  rfc3779.asn1  rfc5280-a.1.asn1  rfc5652-12.1.asn1  rfc5652-12.2.asn1  rfc6482.asn1  rfc6486-a.asn1  rfc6488.asn1
