ASN_MODULE_SOURCES=	\
	libcmscodec/AttributeCertificate.c	\
	libcmscodec/AttributeCertificateInfo.c	\
	libcmscodec/AttCertVersion.c	\
	libcmscodec/Holder.c	\
	libcmscodec/ObjectDigestInfo.c	\
	libcmscodec/AttCertIssuer.c	\
	libcmscodec/V2Form.c	\
	libcmscodec/IssuerSerial.c	\
	libcmscodec/AttCertValidityPeriod.c	\
	libcmscodec/Targets.c	\
	libcmscodec/Target.c	\
	libcmscodec/TargetCert.c	\
	libcmscodec/IetfAttrSyntax.c	\
	libcmscodec/SvceAuthInfo.c	\
	libcmscodec/RoleSyntax.c	\
	libcmscodec/Clearance.c	\
	libcmscodec/ClassList.c	\
	libcmscodec/SecurityCategory.c	\
	libcmscodec/AAControls.c	\
	libcmscodec/AttrSpec.c	\
	libcmscodec/ACClearAttrs.c	\
	libcmscodec/ProxyInfo.c	\
	libcmscodec/Attribute.c	\
	libcmscodec/AttributeType.c	\
	libcmscodec/AttributeValue.c	\
	libcmscodec/AttributeTypeAndValue.c	\
	libcmscodec/X520name.c	\
	libcmscodec/X520CommonName.c	\
	libcmscodec/X520LocalityName.c	\
	libcmscodec/X520StateOrProvinceName.c	\
	libcmscodec/X520OrganizationName.c	\
	libcmscodec/X520OrganizationalUnitName.c	\
	libcmscodec/X520Title.c	\
	libcmscodec/X520dnQualifier.c	\
	libcmscodec/X520countryName.c	\
	libcmscodec/X520SerialNumber.c	\
	libcmscodec/X520Pseudonym.c	\
	libcmscodec/DomainComponent.c	\
	libcmscodec/EmailAddress.c	\
	libcmscodec/Name.c	\
	libcmscodec/RDNSequence.c	\
	libcmscodec/DistinguishedName.c	\
	libcmscodec/RelativeDistinguishedName.c	\
	libcmscodec/DirectoryString.c	\
	libcmscodec/Certificate.c	\
	libcmscodec/TBSCertificate.c	\
	libcmscodec/Version.c	\
	libcmscodec/CertificateSerialNumber.c	\
	libcmscodec/Validity.c	\
	libcmscodec/Time.c	\
	libcmscodec/UniqueIdentifier.c	\
	libcmscodec/SubjectPublicKeyInfo.c	\
	libcmscodec/Extensions.c	\
	libcmscodec/Extension.c	\
	libcmscodec/CertificateList.c	\
	libcmscodec/TBSCertList.c	\
	libcmscodec/AlgorithmIdentifier.c	\
	libcmscodec/ORAddress.c	\
	libcmscodec/BuiltInStandardAttributes.c	\
	libcmscodec/CountryName.c	\
	libcmscodec/AdministrationDomainName.c	\
	libcmscodec/NetworkAddress.c	\
	libcmscodec/X121Address.c	\
	libcmscodec/TerminalIdentifier.c	\
	libcmscodec/PrivateDomainName.c	\
	libcmscodec/OrganizationName.c	\
	libcmscodec/NumericUserIdentifier.c	\
	libcmscodec/PersonalName.c	\
	libcmscodec/OrganizationalUnitNames.c	\
	libcmscodec/OrganizationalUnitName.c	\
	libcmscodec/BuiltInDomainDefinedAttributes.c	\
	libcmscodec/BuiltInDomainDefinedAttribute.c	\
	libcmscodec/ExtensionAttributes.c	\
	libcmscodec/ExtensionAttribute.c	\
	libcmscodec/CommonName.c	\
	libcmscodec/TeletexCommonName.c	\
	libcmscodec/TeletexOrganizationName.c	\
	libcmscodec/TeletexPersonalName.c	\
	libcmscodec/TeletexOrganizationalUnitNames.c	\
	libcmscodec/TeletexOrganizationalUnitName.c	\
	libcmscodec/PDSName.c	\
	libcmscodec/PhysicalDeliveryCountryName.c	\
	libcmscodec/PostalCode.c	\
	libcmscodec/PhysicalDeliveryOfficeName.c	\
	libcmscodec/PhysicalDeliveryOfficeNumber.c	\
	libcmscodec/ExtensionORAddressComponents.c	\
	libcmscodec/PhysicalDeliveryPersonalName.c	\
	libcmscodec/PhysicalDeliveryOrganizationName.c	\
	libcmscodec/ExtensionPhysicalDeliveryAddressComponents.c	\
	libcmscodec/UnformattedPostalAddress.c	\
	libcmscodec/StreetAddress.c	\
	libcmscodec/PostOfficeBoxAddress.c	\
	libcmscodec/PosteRestanteAddress.c	\
	libcmscodec/UniquePostalName.c	\
	libcmscodec/LocalPostalAttributes.c	\
	libcmscodec/PDSParameter.c	\
	libcmscodec/ExtendedNetworkAddress.c	\
	libcmscodec/PresentationAddress.c	\
	libcmscodec/TerminalType.c	\
	libcmscodec/TeletexDomainDefinedAttributes.c	\
	libcmscodec/TeletexDomainDefinedAttribute.c	\
	libcmscodec/AuthorityKeyIdentifier.c	\
	libcmscodec/KeyIdentifier.c	\
	libcmscodec/SubjectKeyIdentifier.c	\
	libcmscodec/KeyUsage.c	\
	libcmscodec/PrivateKeyUsagePeriod.c	\
	libcmscodec/CertificatePolicies.c	\
	libcmscodec/PolicyInformation.c	\
	libcmscodec/CertPolicyId.c	\
	libcmscodec/PolicyQualifierInfo.c	\
	libcmscodec/PolicyQualifierId.c	\
	libcmscodec/CPSuri.c	\
	libcmscodec/UserNotice.c	\
	libcmscodec/NoticeReference.c	\
	libcmscodec/DisplayText.c	\
	libcmscodec/PolicyMappings.c	\
	libcmscodec/SubjectAltName.c	\
	libcmscodec/GeneralNames.c	\
	libcmscodec/GeneralName.c	\
	libcmscodec/AnotherName.c	\
	libcmscodec/EDIPartyName.c	\
	libcmscodec/IssuerAltName.c	\
	libcmscodec/SubjectDirectoryAttributes.c	\
	libcmscodec/BasicConstraints.c	\
	libcmscodec/NameConstraints.c	\
	libcmscodec/GeneralSubtrees.c	\
	libcmscodec/GeneralSubtree.c	\
	libcmscodec/BaseDistance.c	\
	libcmscodec/PolicyConstraints.c	\
	libcmscodec/SkipCerts.c	\
	libcmscodec/CRLDistributionPoints.c	\
	libcmscodec/DistributionPoint.c	\
	libcmscodec/DistributionPointName.c	\
	libcmscodec/ReasonFlags.c	\
	libcmscodec/ExtKeyUsageSyntax.c	\
	libcmscodec/KeyPurposeId.c	\
	libcmscodec/InhibitAnyPolicy.c	\
	libcmscodec/FreshestCRL.c	\
	libcmscodec/AuthorityInfoAccessSyntax.c	\
	libcmscodec/AccessDescription.c	\
	libcmscodec/SubjectInfoAccessSyntax.c	\
	libcmscodec/CRLNumber.c	\
	libcmscodec/IssuingDistributionPoint.c	\
	libcmscodec/BaseCRLNumber.c	\
	libcmscodec/CRLReason.c	\
	libcmscodec/CertificateIssuer.c	\
	libcmscodec/HoldInstructionCode.c	\
	libcmscodec/InvalidityDate.c	\
	libcmscodec/ContentInfo.c	\
	libcmscodec/ContentType.c	\
	libcmscodec/SignedData.c	\
	libcmscodec/DigestAlgorithmIdentifiers.c	\
	libcmscodec/SignerInfos.c	\
	libcmscodec/EncapsulatedContentInfo.c	\
	libcmscodec/SignerInfo.c	\
	libcmscodec/SignerIdentifier.c	\
	libcmscodec/SignedAttributes.c	\
	libcmscodec/UnsignedAttributes.c	\
	libcmscodec/CMSAttribute.c	\
	libcmscodec/CMSAttributeValue.c	\
	libcmscodec/SignatureValue.c	\
	libcmscodec/EnvelopedData.c	\
	libcmscodec/OriginatorInfo.c	\
	libcmscodec/RecipientInfos.c	\
	libcmscodec/EncryptedContentInfo.c	\
	libcmscodec/EncryptedContent.c	\
	libcmscodec/UnprotectedAttributes.c	\
	libcmscodec/RecipientInfo.c	\
	libcmscodec/EncryptedKey.c	\
	libcmscodec/KeyTransRecipientInfo.c	\
	libcmscodec/RecipientIdentifier.c	\
	libcmscodec/KeyAgreeRecipientInfo.c	\
	libcmscodec/OriginatorIdentifierOrKey.c	\
	libcmscodec/OriginatorPublicKey.c	\
	libcmscodec/RecipientEncryptedKeys.c	\
	libcmscodec/RecipientEncryptedKey.c	\
	libcmscodec/KeyAgreeRecipientIdentifier.c	\
	libcmscodec/RecipientKeyIdentifier.c	\
	libcmscodec/CMSSubjectKeyIdentifier.c	\
	libcmscodec/KEKRecipientInfo.c	\
	libcmscodec/KEKIdentifier.c	\
	libcmscodec/PasswordRecipientInfo.c	\
	libcmscodec/OtherRecipientInfo.c	\
	libcmscodec/DigestedData.c	\
	libcmscodec/Digest.c	\
	libcmscodec/EncryptedData.c	\
	libcmscodec/AuthenticatedData.c	\
	libcmscodec/AuthAttributes.c	\
	libcmscodec/UnauthAttributes.c	\
	libcmscodec/MessageAuthenticationCode.c	\
	libcmscodec/DigestAlgorithmIdentifier.c	\
	libcmscodec/SignatureAlgorithmIdentifier.c	\
	libcmscodec/KeyEncryptionAlgorithmIdentifier.c	\
	libcmscodec/ContentEncryptionAlgorithmIdentifier.c	\
	libcmscodec/MessageAuthenticationCodeAlgorithm.c	\
	libcmscodec/KeyDerivationAlgorithmIdentifier.c	\
	libcmscodec/RevocationInfoChoices.c	\
	libcmscodec/RevocationInfoChoice.c	\
	libcmscodec/OtherRevocationInfoFormat.c	\
	libcmscodec/CertificateChoices.c	\
	libcmscodec/AttributeCertificateV2.c	\
	libcmscodec/OtherCertificateFormat.c	\
	libcmscodec/CertificateSet.c	\
	libcmscodec/IssuerAndSerialNumber.c	\
	libcmscodec/CMSVersion.c	\
	libcmscodec/UserKeyingMaterial.c	\
	libcmscodec/OtherKeyAttribute.c	\
	libcmscodec/MessageDigest.c	\
	libcmscodec/SigningTime.c	\
	libcmscodec/CMSTime.c	\
	libcmscodec/Countersignature.c	\
	libcmscodec/ExtendedCertificateOrCertificate.c	\
	libcmscodec/ExtendedCertificate.c	\
	libcmscodec/ExtendedCertificateInfo.c	\
	libcmscodec/Signature.c	\
	libcmscodec/AttributeCertificateV1.c	\
	libcmscodec/AttributeCertificateInfoV1.c	\
	libcmscodec/AttCertVersionV1.c	\
	libcmscodec/RouteOriginAttestation.c	\
	libcmscodec/ASID.c	\
	libcmscodec/ROAIPAddressFamily.c	\
	libcmscodec/ROAIPAddress.c	\
	libcmscodec/IPAddress.c	\
	libcmscodec/Manifest.c	\
	libcmscodec/FileAndHash.c	\
	libcmscodec/BinarySigningTime.c	\
	libcmscodec/BinaryTime.c

ASN_MODULE_HEADERS=	\
	libcmscodec/AttributeCertificate.h	\
	libcmscodec/AttributeCertificateInfo.h	\
	libcmscodec/AttCertVersion.h	\
	libcmscodec/Holder.h	\
	libcmscodec/ObjectDigestInfo.h	\
	libcmscodec/AttCertIssuer.h	\
	libcmscodec/V2Form.h	\
	libcmscodec/IssuerSerial.h	\
	libcmscodec/AttCertValidityPeriod.h	\
	libcmscodec/Targets.h	\
	libcmscodec/Target.h	\
	libcmscodec/TargetCert.h	\
	libcmscodec/IetfAttrSyntax.h	\
	libcmscodec/SvceAuthInfo.h	\
	libcmscodec/RoleSyntax.h	\
	libcmscodec/Clearance.h	\
	libcmscodec/ClassList.h	\
	libcmscodec/SecurityCategory.h	\
	libcmscodec/AAControls.h	\
	libcmscodec/AttrSpec.h	\
	libcmscodec/ACClearAttrs.h	\
	libcmscodec/ProxyInfo.h	\
	libcmscodec/Attribute.h	\
	libcmscodec/AttributeType.h	\
	libcmscodec/AttributeValue.h	\
	libcmscodec/AttributeTypeAndValue.h	\
	libcmscodec/X520name.h	\
	libcmscodec/X520CommonName.h	\
	libcmscodec/X520LocalityName.h	\
	libcmscodec/X520StateOrProvinceName.h	\
	libcmscodec/X520OrganizationName.h	\
	libcmscodec/X520OrganizationalUnitName.h	\
	libcmscodec/X520Title.h	\
	libcmscodec/X520dnQualifier.h	\
	libcmscodec/X520countryName.h	\
	libcmscodec/X520SerialNumber.h	\
	libcmscodec/X520Pseudonym.h	\
	libcmscodec/DomainComponent.h	\
	libcmscodec/EmailAddress.h	\
	libcmscodec/Name.h	\
	libcmscodec/RDNSequence.h	\
	libcmscodec/DistinguishedName.h	\
	libcmscodec/RelativeDistinguishedName.h	\
	libcmscodec/DirectoryString.h	\
	libcmscodec/Certificate.h	\
	libcmscodec/TBSCertificate.h	\
	libcmscodec/Version.h	\
	libcmscodec/CertificateSerialNumber.h	\
	libcmscodec/Validity.h	\
	libcmscodec/Time.h	\
	libcmscodec/UniqueIdentifier.h	\
	libcmscodec/SubjectPublicKeyInfo.h	\
	libcmscodec/Extensions.h	\
	libcmscodec/Extension.h	\
	libcmscodec/CertificateList.h	\
	libcmscodec/TBSCertList.h	\
	libcmscodec/AlgorithmIdentifier.h	\
	libcmscodec/ORAddress.h	\
	libcmscodec/BuiltInStandardAttributes.h	\
	libcmscodec/CountryName.h	\
	libcmscodec/AdministrationDomainName.h	\
	libcmscodec/NetworkAddress.h	\
	libcmscodec/X121Address.h	\
	libcmscodec/TerminalIdentifier.h	\
	libcmscodec/PrivateDomainName.h	\
	libcmscodec/OrganizationName.h	\
	libcmscodec/NumericUserIdentifier.h	\
	libcmscodec/PersonalName.h	\
	libcmscodec/OrganizationalUnitNames.h	\
	libcmscodec/OrganizationalUnitName.h	\
	libcmscodec/BuiltInDomainDefinedAttributes.h	\
	libcmscodec/BuiltInDomainDefinedAttribute.h	\
	libcmscodec/ExtensionAttributes.h	\
	libcmscodec/ExtensionAttribute.h	\
	libcmscodec/CommonName.h	\
	libcmscodec/TeletexCommonName.h	\
	libcmscodec/TeletexOrganizationName.h	\
	libcmscodec/TeletexPersonalName.h	\
	libcmscodec/TeletexOrganizationalUnitNames.h	\
	libcmscodec/TeletexOrganizationalUnitName.h	\
	libcmscodec/PDSName.h	\
	libcmscodec/PhysicalDeliveryCountryName.h	\
	libcmscodec/PostalCode.h	\
	libcmscodec/PhysicalDeliveryOfficeName.h	\
	libcmscodec/PhysicalDeliveryOfficeNumber.h	\
	libcmscodec/ExtensionORAddressComponents.h	\
	libcmscodec/PhysicalDeliveryPersonalName.h	\
	libcmscodec/PhysicalDeliveryOrganizationName.h	\
	libcmscodec/ExtensionPhysicalDeliveryAddressComponents.h	\
	libcmscodec/UnformattedPostalAddress.h	\
	libcmscodec/StreetAddress.h	\
	libcmscodec/PostOfficeBoxAddress.h	\
	libcmscodec/PosteRestanteAddress.h	\
	libcmscodec/UniquePostalName.h	\
	libcmscodec/LocalPostalAttributes.h	\
	libcmscodec/PDSParameter.h	\
	libcmscodec/ExtendedNetworkAddress.h	\
	libcmscodec/PresentationAddress.h	\
	libcmscodec/TerminalType.h	\
	libcmscodec/TeletexDomainDefinedAttributes.h	\
	libcmscodec/TeletexDomainDefinedAttribute.h	\
	libcmscodec/AuthorityKeyIdentifier.h	\
	libcmscodec/KeyIdentifier.h	\
	libcmscodec/SubjectKeyIdentifier.h	\
	libcmscodec/KeyUsage.h	\
	libcmscodec/PrivateKeyUsagePeriod.h	\
	libcmscodec/CertificatePolicies.h	\
	libcmscodec/PolicyInformation.h	\
	libcmscodec/CertPolicyId.h	\
	libcmscodec/PolicyQualifierInfo.h	\
	libcmscodec/PolicyQualifierId.h	\
	libcmscodec/CPSuri.h	\
	libcmscodec/UserNotice.h	\
	libcmscodec/NoticeReference.h	\
	libcmscodec/DisplayText.h	\
	libcmscodec/PolicyMappings.h	\
	libcmscodec/SubjectAltName.h	\
	libcmscodec/GeneralNames.h	\
	libcmscodec/GeneralName.h	\
	libcmscodec/AnotherName.h	\
	libcmscodec/EDIPartyName.h	\
	libcmscodec/IssuerAltName.h	\
	libcmscodec/SubjectDirectoryAttributes.h	\
	libcmscodec/BasicConstraints.h	\
	libcmscodec/NameConstraints.h	\
	libcmscodec/GeneralSubtrees.h	\
	libcmscodec/GeneralSubtree.h	\
	libcmscodec/BaseDistance.h	\
	libcmscodec/PolicyConstraints.h	\
	libcmscodec/SkipCerts.h	\
	libcmscodec/CRLDistributionPoints.h	\
	libcmscodec/DistributionPoint.h	\
	libcmscodec/DistributionPointName.h	\
	libcmscodec/ReasonFlags.h	\
	libcmscodec/ExtKeyUsageSyntax.h	\
	libcmscodec/KeyPurposeId.h	\
	libcmscodec/InhibitAnyPolicy.h	\
	libcmscodec/FreshestCRL.h	\
	libcmscodec/AuthorityInfoAccessSyntax.h	\
	libcmscodec/AccessDescription.h	\
	libcmscodec/SubjectInfoAccessSyntax.h	\
	libcmscodec/CRLNumber.h	\
	libcmscodec/IssuingDistributionPoint.h	\
	libcmscodec/BaseCRLNumber.h	\
	libcmscodec/CRLReason.h	\
	libcmscodec/CertificateIssuer.h	\
	libcmscodec/HoldInstructionCode.h	\
	libcmscodec/InvalidityDate.h	\
	libcmscodec/ContentInfo.h	\
	libcmscodec/ContentType.h	\
	libcmscodec/SignedData.h	\
	libcmscodec/DigestAlgorithmIdentifiers.h	\
	libcmscodec/SignerInfos.h	\
	libcmscodec/EncapsulatedContentInfo.h	\
	libcmscodec/SignerInfo.h	\
	libcmscodec/SignerIdentifier.h	\
	libcmscodec/SignedAttributes.h	\
	libcmscodec/UnsignedAttributes.h	\
	libcmscodec/CMSAttribute.h	\
	libcmscodec/CMSAttributeValue.h	\
	libcmscodec/SignatureValue.h	\
	libcmscodec/EnvelopedData.h	\
	libcmscodec/OriginatorInfo.h	\
	libcmscodec/RecipientInfos.h	\
	libcmscodec/EncryptedContentInfo.h	\
	libcmscodec/EncryptedContent.h	\
	libcmscodec/UnprotectedAttributes.h	\
	libcmscodec/RecipientInfo.h	\
	libcmscodec/EncryptedKey.h	\
	libcmscodec/KeyTransRecipientInfo.h	\
	libcmscodec/RecipientIdentifier.h	\
	libcmscodec/KeyAgreeRecipientInfo.h	\
	libcmscodec/OriginatorIdentifierOrKey.h	\
	libcmscodec/OriginatorPublicKey.h	\
	libcmscodec/RecipientEncryptedKeys.h	\
	libcmscodec/RecipientEncryptedKey.h	\
	libcmscodec/KeyAgreeRecipientIdentifier.h	\
	libcmscodec/RecipientKeyIdentifier.h	\
	libcmscodec/CMSSubjectKeyIdentifier.h	\
	libcmscodec/KEKRecipientInfo.h	\
	libcmscodec/KEKIdentifier.h	\
	libcmscodec/PasswordRecipientInfo.h	\
	libcmscodec/OtherRecipientInfo.h	\
	libcmscodec/DigestedData.h	\
	libcmscodec/Digest.h	\
	libcmscodec/EncryptedData.h	\
	libcmscodec/AuthenticatedData.h	\
	libcmscodec/AuthAttributes.h	\
	libcmscodec/UnauthAttributes.h	\
	libcmscodec/MessageAuthenticationCode.h	\
	libcmscodec/DigestAlgorithmIdentifier.h	\
	libcmscodec/SignatureAlgorithmIdentifier.h	\
	libcmscodec/KeyEncryptionAlgorithmIdentifier.h	\
	libcmscodec/ContentEncryptionAlgorithmIdentifier.h	\
	libcmscodec/MessageAuthenticationCodeAlgorithm.h	\
	libcmscodec/KeyDerivationAlgorithmIdentifier.h	\
	libcmscodec/RevocationInfoChoices.h	\
	libcmscodec/RevocationInfoChoice.h	\
	libcmscodec/OtherRevocationInfoFormat.h	\
	libcmscodec/CertificateChoices.h	\
	libcmscodec/AttributeCertificateV2.h	\
	libcmscodec/OtherCertificateFormat.h	\
	libcmscodec/CertificateSet.h	\
	libcmscodec/IssuerAndSerialNumber.h	\
	libcmscodec/CMSVersion.h	\
	libcmscodec/UserKeyingMaterial.h	\
	libcmscodec/OtherKeyAttribute.h	\
	libcmscodec/MessageDigest.h	\
	libcmscodec/SigningTime.h	\
	libcmscodec/CMSTime.h	\
	libcmscodec/Countersignature.h	\
	libcmscodec/ExtendedCertificateOrCertificate.h	\
	libcmscodec/ExtendedCertificate.h	\
	libcmscodec/ExtendedCertificateInfo.h	\
	libcmscodec/Signature.h	\
	libcmscodec/AttributeCertificateV1.h	\
	libcmscodec/AttributeCertificateInfoV1.h	\
	libcmscodec/AttCertVersionV1.h	\
	libcmscodec/RouteOriginAttestation.h	\
	libcmscodec/ASID.h	\
	libcmscodec/ROAIPAddressFamily.h	\
	libcmscodec/ROAIPAddress.h	\
	libcmscodec/IPAddress.h	\
	libcmscodec/Manifest.h	\
	libcmscodec/FileAndHash.h	\
	libcmscodec/BinarySigningTime.h	\
	libcmscodec/BinaryTime.h

ASN_MODULE_HEADERS+=libcmscodec/ANY.h
ASN_MODULE_SOURCES+=libcmscodec/ANY.c
ASN_MODULE_HEADERS+=libcmscodec/OCTET_STRING.h
ASN_MODULE_HEADERS+=libcmscodec/OPEN_TYPE.h
ASN_MODULE_SOURCES+=libcmscodec/OPEN_TYPE.c
ASN_MODULE_HEADERS+=libcmscodec/constr_CHOICE.h
ASN_MODULE_HEADERS+=libcmscodec/BMPString.h
ASN_MODULE_SOURCES+=libcmscodec/BMPString.c
ASN_MODULE_HEADERS+=libcmscodec/UTF8String.h
ASN_MODULE_HEADERS+=libcmscodec/BOOLEAN.h
ASN_MODULE_SOURCES+=libcmscodec/BOOLEAN.c
ASN_MODULE_HEADERS+=libcmscodec/GeneralizedTime.h
ASN_MODULE_SOURCES+=libcmscodec/GeneralizedTime.c
ASN_MODULE_HEADERS+=libcmscodec/IA5String.h
ASN_MODULE_SOURCES+=libcmscodec/IA5String.c
ASN_MODULE_HEADERS+=libcmscodec/INTEGER.h
ASN_MODULE_SOURCES+=libcmscodec/INTEGER.c
ASN_MODULE_HEADERS+=libcmscodec/NativeEnumerated.h
ASN_MODULE_SOURCES+=libcmscodec/NativeEnumerated.c
ASN_MODULE_HEADERS+=libcmscodec/NativeInteger.h
ASN_MODULE_SOURCES+=libcmscodec/NativeInteger.c
ASN_MODULE_HEADERS+=libcmscodec/NumericString.h
ASN_MODULE_SOURCES+=libcmscodec/NumericString.c
ASN_MODULE_HEADERS+=libcmscodec/OBJECT_IDENTIFIER.h
ASN_MODULE_SOURCES+=libcmscodec/OBJECT_IDENTIFIER.c
ASN_MODULE_HEADERS+=libcmscodec/PrintableString.h
ASN_MODULE_SOURCES+=libcmscodec/PrintableString.c
ASN_MODULE_HEADERS+=libcmscodec/TeletexString.h
ASN_MODULE_SOURCES+=libcmscodec/TeletexString.c
ASN_MODULE_HEADERS+=libcmscodec/UTCTime.h
ASN_MODULE_SOURCES+=libcmscodec/UTCTime.c
ASN_MODULE_SOURCES+=libcmscodec/UTF8String.c
ASN_MODULE_HEADERS+=libcmscodec/UniversalString.h
ASN_MODULE_SOURCES+=libcmscodec/UniversalString.c
ASN_MODULE_HEADERS+=libcmscodec/VisibleString.h
ASN_MODULE_SOURCES+=libcmscodec/VisibleString.c
ASN_MODULE_HEADERS+=libcmscodec/asn_SEQUENCE_OF.h
ASN_MODULE_SOURCES+=libcmscodec/asn_SEQUENCE_OF.c
ASN_MODULE_HEADERS+=libcmscodec/asn_SET_OF.h
ASN_MODULE_SOURCES+=libcmscodec/asn_SET_OF.c
ASN_MODULE_SOURCES+=libcmscodec/constr_CHOICE.c
ASN_MODULE_HEADERS+=libcmscodec/constr_SEQUENCE.h
ASN_MODULE_SOURCES+=libcmscodec/constr_SEQUENCE.c
ASN_MODULE_HEADERS+=libcmscodec/constr_SEQUENCE_OF.h
ASN_MODULE_SOURCES+=libcmscodec/constr_SEQUENCE_OF.c
ASN_MODULE_HEADERS+=libcmscodec/constr_SET_OF.h
ASN_MODULE_HEADERS+=libcmscodec/constr_SET.h
ASN_MODULE_SOURCES+=libcmscodec/constr_SET.c
ASN_MODULE_SOURCES+=libcmscodec/constr_SET_OF.c
ASN_MODULE_HEADERS+=libcmscodec/asn_application.h
ASN_MODULE_SOURCES+=libcmscodec/asn_application.c
ASN_MODULE_HEADERS+=libcmscodec/asn_ioc.h
ASN_MODULE_HEADERS+=libcmscodec/asn_system.h
ASN_MODULE_HEADERS+=libcmscodec/asn_codecs.h
ASN_MODULE_HEADERS+=libcmscodec/asn_internal.h
ASN_MODULE_SOURCES+=libcmscodec/asn_internal.c
ASN_MODULE_HEADERS+=libcmscodec/asn_random_fill.h
ASN_MODULE_SOURCES+=libcmscodec/asn_random_fill.c
ASN_MODULE_HEADERS+=libcmscodec/asn_bit_data.h
ASN_MODULE_SOURCES+=libcmscodec/asn_bit_data.c
ASN_MODULE_SOURCES+=libcmscodec/OCTET_STRING.c
ASN_MODULE_HEADERS+=libcmscodec/BIT_STRING.h
ASN_MODULE_SOURCES+=libcmscodec/BIT_STRING.c
ASN_MODULE_SOURCES+=libcmscodec/asn_codecs_prim.c
ASN_MODULE_HEADERS+=libcmscodec/asn_codecs_prim.h
ASN_MODULE_HEADERS+=libcmscodec/ber_tlv_length.h
ASN_MODULE_SOURCES+=libcmscodec/ber_tlv_length.c
ASN_MODULE_HEADERS+=libcmscodec/ber_tlv_tag.h
ASN_MODULE_SOURCES+=libcmscodec/ber_tlv_tag.c
ASN_MODULE_HEADERS+=libcmscodec/ber_decoder.h
ASN_MODULE_SOURCES+=libcmscodec/ber_decoder.c
ASN_MODULE_HEADERS+=libcmscodec/der_encoder.h
ASN_MODULE_SOURCES+=libcmscodec/der_encoder.c
ASN_MODULE_HEADERS+=libcmscodec/constr_TYPE.h
ASN_MODULE_SOURCES+=libcmscodec/constr_TYPE.c
ASN_MODULE_HEADERS+=libcmscodec/constraints.h
ASN_MODULE_SOURCES+=libcmscodec/constraints.c
ASN_MODULE_HEADERS+=libcmscodec/xer_support.h
ASN_MODULE_SOURCES+=libcmscodec/xer_support.c
ASN_MODULE_HEADERS+=libcmscodec/xer_decoder.h
ASN_MODULE_SOURCES+=libcmscodec/xer_decoder.c
ASN_MODULE_HEADERS+=libcmscodec/xer_encoder.h
ASN_MODULE_SOURCES+=libcmscodec/xer_encoder.c
ASN_MODULE_HEADERS+=libcmscodec/per_support.h
ASN_MODULE_SOURCES+=libcmscodec/per_support.c
ASN_MODULE_HEADERS+=libcmscodec/per_decoder.h
ASN_MODULE_SOURCES+=libcmscodec/per_decoder.c
ASN_MODULE_HEADERS+=libcmscodec/per_encoder.h
ASN_MODULE_SOURCES+=libcmscodec/per_encoder.c
ASN_MODULE_HEADERS+=libcmscodec/per_opentype.h
ASN_MODULE_SOURCES+=libcmscodec/per_opentype.c
ASN_MODULE_HEADERS+=libcmscodec/oer_decoder.h
ASN_MODULE_HEADERS+=libcmscodec/oer_encoder.h
ASN_MODULE_HEADERS+=libcmscodec/oer_support.h
ASN_MODULE_SOURCES+=libcmscodec/oer_decoder.c
ASN_MODULE_SOURCES+=libcmscodec/oer_encoder.c
ASN_MODULE_SOURCES+=libcmscodec/oer_support.c
ASN_MODULE_SOURCES+=libcmscodec/OPEN_TYPE_oer.c
ASN_MODULE_SOURCES+=libcmscodec/INTEGER_oer.c
ASN_MODULE_SOURCES+=libcmscodec/BIT_STRING_oer.c
ASN_MODULE_SOURCES+=libcmscodec/OCTET_STRING_oer.c
ASN_MODULE_SOURCES+=libcmscodec/NativeInteger_oer.c
ASN_MODULE_SOURCES+=libcmscodec/NativeEnumerated_oer.c
ASN_MODULE_SOURCES+=libcmscodec/constr_CHOICE_oer.c
ASN_MODULE_SOURCES+=libcmscodec/constr_SEQUENCE_oer.c
ASN_MODULE_SOURCES+=libcmscodec/constr_SET_OF_oer.c

ASN_MODULE_CFLAGS=-DASN_DISABLE_PER_SUPPORT 

lib_LTLIBRARIES=libcmscodec.la
libcmscodec_la_SOURCES=$(ASN_MODULE_SOURCES) $(ASN_MODULE_HEADERS)
libcmscodec_la_CFLAGS=$(ASN_MODULE_CFLAGS)
libcmscodec_la_LDFLAGS=-lm

ASN_MODULEdir=@includedir@/libcmscodec
