ASN_MODULE_SOURCES=	\
	libcmscodec/IPAddrBlocks.c	\
	libcmscodec/IPAddressFamily.c	\
	libcmscodec/IPAddressChoice.c	\
	libcmscodec/IPAddressOrRange.c	\
	libcmscodec/IPAddressRange.c	\
	libcmscodec/IPAddress.c	\
	libcmscodec/ASIdentifiers.c	\
	libcmscodec/ASIdentifierChoice.c	\
	libcmscodec/ASIdOrRange.c	\
	libcmscodec/ASRange.c	\
	libcmscodec/ASId.c	\
	libcmscodec/AttributeType.c	\
	libcmscodec/AttributeValue.c	\
	libcmscodec/AttributeTypeAndValue.c	\
	libcmscodec/Name.c	\
	libcmscodec/RDNSequence.c	\
	libcmscodec/DistinguishedName.c	\
	libcmscodec/RelativeDistinguishedName.c	\
	libcmscodec/Version.c	\
	libcmscodec/CertificateSerialNumber.c	\
	libcmscodec/Time.c	\
	libcmscodec/Extensions.c	\
	libcmscodec/Extension.c	\
	libcmscodec/CertificateList.c	\
	libcmscodec/TBSCertList.c	\
	libcmscodec/AlgorithmIdentifier.c	\
	libcmscodec/ContentInfo.c	\
	libcmscodec/ContentType.c	\
	libcmscodec/SignedData.c	\
	libcmscodec/DigestAlgorithmIdentifiers.c	\
	libcmscodec/SignerInfos.c	\
	libcmscodec/EncapsulatedContentInfo.c	\
	libcmscodec/SignerInfo.c	\
	libcmscodec/SignerIdentifier.c	\
	libcmscodec/SignedAttributes.c	\
	libcmscodec/UnsignedAttributes.c	\
	libcmscodec/CMSAttribute.c	\
	libcmscodec/CMSAttributeValue.c	\
	libcmscodec/SignatureValue.c	\
	libcmscodec/CMSSubjectKeyIdentifier.c	\
	libcmscodec/DigestAlgorithmIdentifier.c	\
	libcmscodec/SignatureAlgorithmIdentifier.c	\
	libcmscodec/RevocationInfoChoices.c	\
	libcmscodec/RevocationInfoChoice.c	\
	libcmscodec/OtherRevocationInfoFormat.c	\
	libcmscodec/CertificateSet.c	\
	libcmscodec/IssuerAndSerialNumber.c	\
	libcmscodec/CMSVersion.c	\
	libcmscodec/MessageDigest.c	\
	libcmscodec/SigningTime.c	\
	libcmscodec/Countersignature.c	\
	libcmscodec/RouteOriginAttestation.c	\
	libcmscodec/ASID.c	\
	libcmscodec/ROAIPAddressFamily.c	\
	libcmscodec/ROAIPAddress.c	\
	libcmscodec/Manifest.c	\
	libcmscodec/FileAndHash.c	\
	libcmscodec/BinarySigningTime.c	\
	libcmscodec/BinaryTime.c

ASN_MODULE_HEADERS=	\
	libcmscodec/IPAddrBlocks.h	\
	libcmscodec/IPAddressFamily.h	\
	libcmscodec/IPAddressChoice.h	\
	libcmscodec/IPAddressOrRange.h	\
	libcmscodec/IPAddressRange.h	\
	libcmscodec/IPAddress.h	\
	libcmscodec/ASIdentifiers.h	\
	libcmscodec/ASIdentifierChoice.h	\
	libcmscodec/ASIdOrRange.h	\
	libcmscodec/ASRange.h	\
	libcmscodec/ASId.h	\
	libcmscodec/AttributeType.h	\
	libcmscodec/AttributeValue.h	\
	libcmscodec/AttributeTypeAndValue.h	\
	libcmscodec/Name.h	\
	libcmscodec/RDNSequence.h	\
	libcmscodec/DistinguishedName.h	\
	libcmscodec/RelativeDistinguishedName.h	\
	libcmscodec/Version.h	\
	libcmscodec/CertificateSerialNumber.h	\
	libcmscodec/Time.h	\
	libcmscodec/Extensions.h	\
	libcmscodec/Extension.h	\
	libcmscodec/CertificateList.h	\
	libcmscodec/TBSCertList.h	\
	libcmscodec/AlgorithmIdentifier.h	\
	libcmscodec/ContentInfo.h	\
	libcmscodec/ContentType.h	\
	libcmscodec/SignedData.h	\
	libcmscodec/DigestAlgorithmIdentifiers.h	\
	libcmscodec/SignerInfos.h	\
	libcmscodec/EncapsulatedContentInfo.h	\
	libcmscodec/SignerInfo.h	\
	libcmscodec/SignerIdentifier.h	\
	libcmscodec/SignedAttributes.h	\
	libcmscodec/UnsignedAttributes.h	\
	libcmscodec/CMSAttribute.h	\
	libcmscodec/CMSAttributeValue.h	\
	libcmscodec/SignatureValue.h	\
	libcmscodec/CMSSubjectKeyIdentifier.h	\
	libcmscodec/DigestAlgorithmIdentifier.h	\
	libcmscodec/SignatureAlgorithmIdentifier.h	\
	libcmscodec/RevocationInfoChoices.h	\
	libcmscodec/RevocationInfoChoice.h	\
	libcmscodec/OtherRevocationInfoFormat.h	\
	libcmscodec/CertificateSet.h	\
	libcmscodec/IssuerAndSerialNumber.h	\
	libcmscodec/CMSVersion.h	\
	libcmscodec/MessageDigest.h	\
	libcmscodec/SigningTime.h	\
	libcmscodec/Countersignature.h	\
	libcmscodec/RouteOriginAttestation.h	\
	libcmscodec/ASID.h	\
	libcmscodec/ROAIPAddressFamily.h	\
	libcmscodec/ROAIPAddress.h	\
	libcmscodec/Manifest.h	\
	libcmscodec/FileAndHash.h	\
	libcmscodec/BinarySigningTime.h	\
	libcmscodec/BinaryTime.h

ASN_MODULE_HEADERS+=libcmscodec/ANY.h
ASN_MODULE_SOURCES+=libcmscodec/ANY.c
ASN_MODULE_HEADERS+=libcmscodec/OCTET_STRING.h
ASN_MODULE_HEADERS+=libcmscodec/OPEN_TYPE.h
ASN_MODULE_SOURCES+=libcmscodec/OPEN_TYPE.c
ASN_MODULE_HEADERS+=libcmscodec/constr_CHOICE.h
ASN_MODULE_HEADERS+=libcmscodec/BOOLEAN.h
ASN_MODULE_SOURCES+=libcmscodec/BOOLEAN.c
ASN_MODULE_HEADERS+=libcmscodec/GeneralizedTime.h
ASN_MODULE_SOURCES+=libcmscodec/GeneralizedTime.c
ASN_MODULE_HEADERS+=libcmscodec/IA5String.h
ASN_MODULE_SOURCES+=libcmscodec/IA5String.c
ASN_MODULE_HEADERS+=libcmscodec/INTEGER.h
ASN_MODULE_SOURCES+=libcmscodec/INTEGER.c
ASN_MODULE_HEADERS+=libcmscodec/NULL.h
ASN_MODULE_SOURCES+=libcmscodec/NULL.c
ASN_MODULE_HEADERS+=libcmscodec/OBJECT_IDENTIFIER.h
ASN_MODULE_SOURCES+=libcmscodec/OBJECT_IDENTIFIER.c
ASN_MODULE_HEADERS+=libcmscodec/UTCTime.h
ASN_MODULE_SOURCES+=libcmscodec/UTCTime.c
ASN_MODULE_HEADERS+=libcmscodec/asn_SEQUENCE_OF.h
ASN_MODULE_SOURCES+=libcmscodec/asn_SEQUENCE_OF.c
ASN_MODULE_HEADERS+=libcmscodec/asn_SET_OF.h
ASN_MODULE_SOURCES+=libcmscodec/asn_SET_OF.c
ASN_MODULE_SOURCES+=libcmscodec/constr_CHOICE.c
ASN_MODULE_HEADERS+=libcmscodec/constr_SEQUENCE.h
ASN_MODULE_SOURCES+=libcmscodec/constr_SEQUENCE.c
ASN_MODULE_HEADERS+=libcmscodec/constr_SEQUENCE_OF.h
ASN_MODULE_SOURCES+=libcmscodec/constr_SEQUENCE_OF.c
ASN_MODULE_HEADERS+=libcmscodec/constr_SET_OF.h
ASN_MODULE_SOURCES+=libcmscodec/constr_SET_OF.c
ASN_MODULE_HEADERS+=libcmscodec/asn_application.h
ASN_MODULE_SOURCES+=libcmscodec/asn_application.c
ASN_MODULE_HEADERS+=libcmscodec/asn_ioc.h
ASN_MODULE_HEADERS+=libcmscodec/asn_system.h
ASN_MODULE_HEADERS+=libcmscodec/asn_codecs.h
ASN_MODULE_HEADERS+=libcmscodec/asn_internal.h
ASN_MODULE_SOURCES+=libcmscodec/asn_internal.c
ASN_MODULE_HEADERS+=libcmscodec/asn_random_fill.h
ASN_MODULE_SOURCES+=libcmscodec/asn_random_fill.c
ASN_MODULE_HEADERS+=libcmscodec/asn_bit_data.h
ASN_MODULE_SOURCES+=libcmscodec/asn_bit_data.c
ASN_MODULE_SOURCES+=libcmscodec/OCTET_STRING.c
ASN_MODULE_HEADERS+=libcmscodec/BIT_STRING.h
ASN_MODULE_SOURCES+=libcmscodec/BIT_STRING.c
ASN_MODULE_SOURCES+=libcmscodec/asn_codecs_prim.c
ASN_MODULE_HEADERS+=libcmscodec/asn_codecs_prim.h
ASN_MODULE_HEADERS+=libcmscodec/ber_tlv_length.h
ASN_MODULE_SOURCES+=libcmscodec/ber_tlv_length.c
ASN_MODULE_HEADERS+=libcmscodec/ber_tlv_tag.h
ASN_MODULE_SOURCES+=libcmscodec/ber_tlv_tag.c
ASN_MODULE_HEADERS+=libcmscodec/ber_decoder.h
ASN_MODULE_SOURCES+=libcmscodec/ber_decoder.c
ASN_MODULE_HEADERS+=libcmscodec/der_encoder.h
ASN_MODULE_SOURCES+=libcmscodec/der_encoder.c
ASN_MODULE_HEADERS+=libcmscodec/constr_TYPE.h
ASN_MODULE_SOURCES+=libcmscodec/constr_TYPE.c
ASN_MODULE_HEADERS+=libcmscodec/constraints.h
ASN_MODULE_SOURCES+=libcmscodec/constraints.c
ASN_MODULE_HEADERS+=libcmscodec/xer_support.h
ASN_MODULE_SOURCES+=libcmscodec/xer_support.c
ASN_MODULE_HEADERS+=libcmscodec/xer_decoder.h
ASN_MODULE_SOURCES+=libcmscodec/xer_decoder.c
ASN_MODULE_HEADERS+=libcmscodec/xer_encoder.h
ASN_MODULE_SOURCES+=libcmscodec/xer_encoder.c
ASN_MODULE_HEADERS+=libcmscodec/per_support.h
ASN_MODULE_SOURCES+=libcmscodec/per_support.c
ASN_MODULE_HEADERS+=libcmscodec/per_decoder.h
ASN_MODULE_SOURCES+=libcmscodec/per_decoder.c
ASN_MODULE_HEADERS+=libcmscodec/per_encoder.h
ASN_MODULE_SOURCES+=libcmscodec/per_encoder.c
ASN_MODULE_HEADERS+=libcmscodec/per_opentype.h
ASN_MODULE_SOURCES+=libcmscodec/per_opentype.c
ASN_MODULE_HEADERS+=libcmscodec/oer_decoder.h
ASN_MODULE_HEADERS+=libcmscodec/oer_encoder.h
ASN_MODULE_HEADERS+=libcmscodec/oer_support.h
ASN_MODULE_SOURCES+=libcmscodec/oer_decoder.c
ASN_MODULE_SOURCES+=libcmscodec/oer_encoder.c
ASN_MODULE_SOURCES+=libcmscodec/oer_support.c
ASN_MODULE_SOURCES+=libcmscodec/OPEN_TYPE_oer.c
ASN_MODULE_SOURCES+=libcmscodec/INTEGER_oer.c
ASN_MODULE_SOURCES+=libcmscodec/BIT_STRING_oer.c
ASN_MODULE_SOURCES+=libcmscodec/OCTET_STRING_oer.c
ASN_MODULE_SOURCES+=libcmscodec/constr_CHOICE_oer.c
ASN_MODULE_SOURCES+=libcmscodec/constr_SEQUENCE_oer.c
ASN_MODULE_SOURCES+=libcmscodec/constr_SET_OF_oer.c

ASN_MODULE_CFLAGS=-DASN_DISABLE_PER_SUPPORT 

lib_LTLIBRARIES=libcmscodec.la
libcmscodec_la_SOURCES=$(ASN_MODULE_SOURCES) $(ASN_MODULE_HEADERS)
libcmscodec_la_CFLAGS=$(ASN_MODULE_CFLAGS)
libcmscodec_la_LDFLAGS=-lm

ASN_MODULEdir=@includedir@/libcmscodec
